--- a/.github/workflows/auto_fetch.yml
+++ b/.github/workflows/auto_fetch.yml
@@ -2,24 +2,38 @@ name: Auto Fetch CricHD API
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Runs every 10 minutes
-  workflow_dispatch:
+    - cron: "*/10 * * * *"   # हर 10 मिनट
+  workflow_dispatch:        # Manual Run button
+
+permissions:
+  contents: write
 
 jobs:
-  fetch:
+  update:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
 
-    - name: Install requests
-      run: pip install requests
+      - name: Run fetch script
+        run: |
+          python3 scripts/auto_fetch.py
 
-    - name: Run fetch script
-      run: python auto_fetch.py
+      - name: Commit & push if changed
+        run: |
+          if git diff --quiet --exit-code; then
+            echo "No changes to commit"
+          else
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add live_stream/auto_fetch_crichd_api.json
+            git commit -m "Auto-update: refresh auto_fetch_crichd_api.json [skip ci]"
+            git push
+          fi
