--- a/.github/workflows/auto_fetch.yml
+++ b/.github/workflows/auto_fetch.yml
@@ -1,9 +1,9 @@
-name: Auto Fetch CricHD API
+name: Auto Fetch Crichd API
 
 on:
   schedule:
-    - cron: "*/10 * * * *"   # हर 10 मिनट
-  workflow_dispatch:        # Manual Run button
+    - cron: "*/10 * * * *"   # हर 10 मिनट में रन
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -14,26 +14,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.x'
+
+      - name: Install requirements (if any)
+        run: |
+          pip install -r requirements.txt || echo "No requirements.txt"
 
       - name: Run fetch script
-        run: |
-          python3 fetch_crichd_api.py
+        run: python3 fetch_crichd_api.py 
 
-      - name: Commit & push if changed
+      - name: Commit updated files
         run: |
-          if git diff --quiet --exit-code; then
-            echo "No changes to commit"
-          else
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add crichd-auto-fetch/auto_fetch_crichd_api.json
-            git commit -m "Auto-update: refresh auto_fetch_crichd_api.json [skip ci]"
-            git push
-          fi
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add crichd-auto-fetch/auto_fetch_crichd_api.json
+          git commit -m "Auto update Crichd API JSON" || echo "No changes to commit"
+          git push
